<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GroceryListActivity">

    <RelativeLayout
        android:id="@+id/rlBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/rlHead2"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

            <TextView
                android:id="@+id/tvShopName"
                style="@style/HeadingText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/shop_name" />

            <RelativeLayout
                android:id="@+id/rlBack"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true">

                <androidx.cardview.widget.CardView
                    style="@style/ShopCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_5sdp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <ImageView
                        android:id="@+id/ivBack"
                        style="@style/ShopCardBackground"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/logo"
                        android:onClick="back"
                        android:padding="@dimen/_8sdp"
                        android:src="@drawable/back_24" />
                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlClearList"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true">

                <androidx.cardview.widget.CardView
                    style="@style/ShopCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_5sdp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <ImageView
                        android:id="@+id/ivClearList"
                        style="@style/ShopCardBackgroundRed"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/Red"
                        android:contentDescription="@string/logo"
                        android:padding="@dimen/_8sdp"
                        android:src="@drawable/delete_24" />
                </androidx.cardview.widget.CardView>
            </RelativeLayout>
        </RelativeLayout>

        <ImageView
            android:id="@+id/ivShopLogo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/rlHead2"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/_15sdp"
            android:contentDescription="@string/shop_logo"
            android:foreground="#CEFFFFFF" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvItems"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/llPriceSection"
            android:paddingBottom="@dimen/_10sdp"
            tools:listitem="@layout/check_item" />

        <LinearLayout
            android:id="@+id/llPriceSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlHead2"
            android:background="@drawable/white_gradient">

            <androidx.cardview.widget.CardView
                style="@style/ShopCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp">

                <RelativeLayout
                    android:id="@+id/rlCard"
                    style="@style/ShopCardBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_15sdp"
                        android:baselineAligned="false"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="5"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvUnchecked"
                                style="@style/BoldText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/r0_0" />

                            <TextView
                                style="@style/Text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/unchecked" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="5"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvChecked"
                                style="@style/BoldText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/r0_0"
                                android:textColor="@color/green"
                                android:textSize="@dimen/_14ssp" />

                            <TextView
                                style="@style/Text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/price_to_pay"
                                android:textSize="@dimen/_14ssp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="5"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvTotal"
                                style="@style/BoldText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/r0_0" />

                            <TextView
                                style="@style/Text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/total" />
                        </LinearLayout>
                    </LinearLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </RelativeLayout>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fabMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
        fab:menu_animationDelayPerItem="50"
        fab:menu_backgroundColor="@android:color/transparent"
        fab:menu_colorNormal="@color/primary_green"
        fab:menu_colorRipple="#ADFFFFFF"
        fab:menu_fab_size="normal"
        fab:menu_icon="@drawable/fab_add"
        fab:menu_labels_colorNormal="#FFFFFF"
        fab:menu_labels_colorPressed="#FFFFFF"
        fab:menu_labels_colorRipple="#66FFFFFF"
        fab:menu_labels_cornerRadius="3dp"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        fab:menu_labels_margin="0dp"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_padding="8dp"
        fab:menu_labels_paddingBottom="4dp"
        fab:menu_labels_paddingLeft="8dp"
        fab:menu_labels_paddingRight="5dp"
        fab:menu_labels_paddingTop="4dp"
        fab:menu_labels_position="left"
        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_textColor="#000000"
        fab:menu_labels_textSize="14sp"
        fab:menu_openDirection="up"
        fab:menu_shadowRadius="4dp"
        fab:menu_shadowXOffset="1dp"
        fab:menu_shadowYOffset="3dp">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabCompareList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/compare_24"
            app:fab_colorNormal="@color/accent_yellow"
            app:fab_colorPressed="@color/primary_green"
            fab:fab_label="Compare list"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabAddItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/add_24"
            app:fab_colorNormal="@color/accent_yellow"
            app:fab_colorPressed="@color/primary_green"
            fab:fab_label="Add Item"
            fab:fab_size="normal" />

    </com.github.clans.fab.FloatingActionMenu>
</androidx.coordinatorlayout.widget.CoordinatorLayout>