<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clFirstBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvHead"
            style="@style/BackgroundColor"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/coiny_regular"
            android:gravity="center"
            android:text="@string/accucery"
            android:textColor="@color/primary_green"
            android:textSize="@dimen/_16ssp"
            app:drawableLeftCompat="@drawable/custom_logo" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvShops"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/adView"
            android:layout_below="@+id/tvHead"
            tools:listitem="@layout/shop_item" />


        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/BannerAds" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsvBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        app:behavior_hideable="false"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <RelativeLayout
            android:id="@+id/rlBottomSheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvShopName"
                style="@style/HeadingText"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center"
                android:text="@string/shop_name"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvClose"
                style="@style/HeadingText"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:text="x"
                android:textColor="@color/white" />

            <LinearLayout
                android:id="@+id/llCompared"
                android:layout_width="match_parent"
                android:layout_below="@+id/tvShopName"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_60sdp">

                    <RelativeLayout
                        android:id="@+id/rlBody"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/ivItem"
                            android:layout_width="@dimen/_42sdp"
                            android:layout_height="@dimen/_42sdp"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:contentDescription="@string/item_image" />

                        <TextView
                            android:id="@+id/tvName"
                            style="@style/Text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:layout_marginTop="@dimen/_15sdp"
                            android:layout_marginEnd="@dimen/_15sdp"
                            android:layout_marginBottom="@dimen/_3sdp"
                            android:layout_toStartOf="@id/tvPrice"
                            android:layout_toEndOf="@id/ivItem"/>

                        <TextView
                            android:id="@+id/tvPrice"
                            style="@style/BoldText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="@dimen/_15sdp"
                            android:textSize="@dimen/_14ssp" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvItems"
                android:layout_below="@+id/llCompared"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/_10sdp"
                tools:listitem="@layout/grocery_item_search" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lavLoading"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:layout_below="@id/rvItems"
                android:layout_centerInParent="true"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/trolley_animation"
                app:lottie_speed="1" />
        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>