<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/_5sdp">

        <RelativeLayout
            android:id="@+id/rlItem"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp">

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="@dimen/_56sdp"
                android:layout_height="@dimen/_56sdp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:contentDescription="@string/item_image"
                android:src="@color/primary_green" />

            <TextView
                android:id="@+id/tvItemName"
                style="@style/ItemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_toStartOf="@+id/rlQuantity"
                android:layout_toEndOf="@id/ivImage"
                android:text="@string/item_name" />

            <TextView
                android:id="@+id/tvItemQuantity"
                style="@style/ItemQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvItemName"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_toEndOf="@id/tvItemPrice"
                android:text="@string/x1_r0_00"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvItemPrice"
                style="@style/ItemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvItemName"
                android:layout_toEndOf="@id/ivImage"
                android:text="@string/r0_0"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_alignParentBottom="true"
                android:background="#9FF0FF" />

            <LinearLayout
                android:id="@+id/rlQuantity"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvAdd"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingTop="@dimen/_6sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_6sdp"
                    android:text="+"
                    android:textColor="@color/green"
                    android:textSize="@dimen/_16ssp" />

                <TextView
                    android:id="@+id/tvSubtract"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingTop="@dimen/_6sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_6sdp"
                    android:text="-"
                    android:textColor="@color/Red"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold" />
            </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.gms.ads.nativead.NativeAdView
        android:id="@+id/native_ad_layout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rlAdBody"
            style="@style/ShopItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F6F6F6"
            android:padding="@dimen/_10sdp">

            <ImageView
                android:id="@+id/ad_icon"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:contentDescription="@string/item_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_toEndOf="@id/ad_icon"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ad_headline"
                    style="@style/ItemPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/ad_advertiser"
                    style="@style/ItemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/ad_body"
                    style="@style/ItemQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/ad_action"
                    style="@style/ItemPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/primary_green" />
            </LinearLayout>
        </RelativeLayout>
    </com.google.android.gms.ads.nativead.NativeAdView>
</LinearLayout>
